@@ -1,4 +1,4 @@
-.TH SCONTROL "1" "June 2007" "scontrol 1.3" "Slurm components"
+.TH SCONTROL "1" "October 2007" "scontrol 1.3" "Slurm components"
 
 .SH "NAME"
 scontrol \- Used view and modify Slurm configuration and state.
@@ -357,9 +357,17 @@ can be \fIminutes\fR, \fIhours\fR, \fIdays\fR, or \fIweeks\fR
 and you can tell SLURM to run the job today with the keyword
 \fItoday\fR and to run the job tomorrow with the keyword
 \fItomorrow\fR.
+
 .TP
-\fITimeLimit\fP=<minutes>
-Set the job's time limit to the specified value.
+\fITimeLimit\fP=<time>
+The job's time limit.
+Output format is [days\-]hours:minutes:seconds or "UNLIMITED".
+Input format (for \fBupdate\fR command) set is minutes, minutes:seconds, 
+hours:minutes:seconds, days\-hours, days\-hours:minutes or 
+days\-hours:minutes:seconds.
+Time resolution is one minute and second values are rounded up to 
+the next minute.
+
 .TP
 \fIConnection\fP=<type>
 Reset the node connection type.
@@ -431,10 +439,17 @@ Possible values are"YES" and "NO".
 \fIMaxNodes\fP=<count>
 Set the maximum number of nodes which will be allocated to any single job 
 in the partition. Specify a number, "INFINITE" or "UNLIMITED".
+
 .TP
-\fIMaxTime\fP=<minutes>
-Set the maximum run time for a jobs in minutes. 
-Specify a number, "INFINITE" or "UNLIMITED".
+\fIMaxTime\fP=<time>
+The maximum run time for jobs.
+Output format is [days\-]hours:minutes:seconds or "UNLIMITED".
+Input format (for \fBupdate\fR command) is minutes, minutes:seconds, 
+hours:minutes:seconds, days\-hours, days\-hours:minutes or 
+days\-hours:minutes:seconds.
+Time resolution is one minute and second values are rounded up to 
+the next minute.
+
 .TP
 \fIMinNodes\fP=<count>
 Set the minimum number of nodes which will be allocated to any single job 
@@ -505,17 +520,17 @@ scontrol: show part class
 .br 
 PartitionName=class TotalNodes=10 TotalCPUs=20 RootOnly=NO
 .br 
-   Default=NO Shared=NO State=UP MaxTime=30 Hidden=NO
+   Default=NO Shared=NO State=UP MaxTime=0:30:00 Hidden=NO
 .br
    MinNodes=1 MaxNodes=2 AllowGroups=students
 .br
    Nodes=lx[0031-0040] NodeIndices=31,40,-1
 .br 
-scontrol: update PartitionName=class MaxTime=99 MaxNodes=4
+scontrol: update PartitionName=class MaxTime=60:00 MaxNodes=4
 .br 
 scontrol: show job 65539
 .br 
-JobId=65539 UserId=1500 JobState=PENDING TimeLimit=100
+JobId=65539 UserId=1500 JobState=PENDING TimeLimit=0:20:00
 .br 
    Priority=100 Partition=batch Name=job01 NodeList=(null) 
 .br 
@@ -527,7 +542,7 @@ JobId=65539 UserId=1500 JobState=PENDING TimeLimit=100
 .br
    Features=(null) JobScript=/bin/hostname 
 .br 
-scontrol: update JobId=65539 TimeLimit=200 Priority=500
+scontrol: update JobId=65539 TimeLimit=30:00 Priority=500
 .br 
 scontrol: show hosts tux[1-3]
 .br
